namespace TLT.Enemy
{
  public static class EnemyAnimations
  {
    public const string IS_WALK = "IsWalk";

    public const string IS_DEATH_LANDING = "IsDeathLanding";

    public const string IS_DEATH_SPEED = "IsDeathSpeed";

    public const string IS_DEATH = "IsDeath";

    public const string IS_TAKE_DAMAGE = "IsTakeDamage";

    public const string IS_ATTACK = "IsAttack";
  }
}